# catcheye-vision-sdk

./: CMakeLists.txt  README.md
libs/vision-detection/: CMakeLists.txt  README.md
libs/vision-detection/include/catcheye/detection/: bounding_box.hpp  detector.hpp  detector_factory.hpp
libs/vision-detection/include/catcheye/detection/hailo/: hailo_detector.hpp
libs/vision-detection/include/catcheye/detection/ncnn/: ncnn_detector.hpp
libs/vision-detection/include/catcheye/detection/postprocess/: decode_context.hpp  decode_result.hpp  detection_candidate.hpp  postprocess.hpp  tensor_view.hpp  yolo_decoder.hpp
libs/vision-detection/src/: ncnn_detector.cpp
libs/vision-detection/src/hailo/: hailo_detector.cpp  hailo_nms_decoder.cpp  hailo_nms_decoder.hpp
libs/vision-detection/src/ncnn/: ncnn_detector.cpp
libs/vision-detection/src/postprocess/: postprocess.cpp  yolo_decoder.cpp
libs/vision-http/: CMakeLists.txt
libs/vision-http/include/catcheye/http/: http_server.hpp  roi_api.hpp
libs/vision-http/src/: http_server.cpp  roi_api.cpp
libs/vision-http/tests/: test_roi_api.cpp
libs/vision-input/: CMakeLists.txt  README.md
libs/vision-input/include/catcheye/input/: frame.hpp  frame_source.hpp  gstreamer_source.hpp  libcamera_source.hpp  pixel_format.hpp  rgb_intrinsic_calibrator.hpp  timestamp.hpp
libs/vision-input/src/: frame_source.cpp  gstreamer_source.cpp  libcamera_source.cpp  rgb_intrinsic_calibrator.cpp
libs/vision-input/tests/: test_frame_source.cpp
libs/vision-protocol/: CMakeLists.txt  README.md
libs/vision-protocol/include/catcheye/protocol/: frame_message.hpp
libs/vision-protocol/src/: frame_message.cpp
libs/vision-roi/: CMakeLists.txt  README.md
libs/vision-roi/include/catcheye/roi/: camera_roi_config.hpp  point.hpp  roi_evaluator.hpp  roi_geometry.hpp  roi_polygon.hpp  roi_repository.hpp  roi_validation.hpp
libs/vision-roi/src/: roi_evaluator.cpp  roi_geometry.cpp  roi_repository.cpp  roi_validation.cpp
libs/vision-roi/tests/: test_roi_evaluator.cpp  test_roi_geometry.cpp  test_roi_repository.cpp  test_roi_validation.cpp  test_support.hpp
libs/vision-runtime/: CMakeLists.txt  README.md
libs/vision-runtime/include/catcheye/runtime/: frame_processing_runner.hpp  frame_processor.hpp  preview_sink.hpp
libs/vision-runtime/src/: frame_processing_runner.cpp
libs/vision-runtime/tests/: test_frame_processing_runner.cpp  test_main.cpp
libs/vision-transport/: CMakeLists.txt  README.md
libs/vision-transport/include/catcheye/transport/: result_publisher.hpp  rtsp_publisher.hpp  websocket_publisher.hpp
libs/vision-transport/src/: rtsp_publisher.cpp  websocket_publisher.cpp
libs/vision-visualization/: CMakeLists.txt
libs/vision-visualization/include/catcheye/visualization/: annotation_renderer.hpp
libs/vision-visualization/src/: annotation_renderer.cpp
libs/vision-visualization/tests/: test_annotation_renderer.cpp
